Migrate to JUnit5
- Migrate remaining JUnit4 tests to JUnit5
- Remove JUnit4 dependency
- Update testing(JUnit, Mockito) dependencies to latest versions